of70/src/log.log
ty/petsc-3.10.2/arch-linux2-c-opt/include -isystem/home/rahulv/OpenFOAM/rahulv-7/ThirdParty/petsc-3.10.2/include -DOMPI_SKIP_MPICXX -I/usr/lib/x86_64-linux-gnu/openmpi/include/openmpi -I/usr/lib/x86_64-linux-gnu/openmpi/include/openmpi/opal/mca/event/libevent2022/libevent -I/usr/lib/x86_64-linux-gnu/openmpi/include/openmpi/opal/mca/event/libevent2022/libevent/include -I/usr/lib/x86_64-linux-gnu/openmpi/include -pthread -IlnInclude -I. -I/opt/openfoam7/src/OpenFOAM/lnInclude -I/opt/openfoam7/src/OSspecific/POSIX/lnInclude   -fPIC -c constitutiveEqs/otherModels/Saramito/SaramitoLog/SaramitoLog.C -o Make/linux64GccDPInt32Opt/constitutiveEqs/otherModels/Saramito/SaramitoLog/SaramitoLog.o
g++ -std=c++11 -m64 -Dlinux64 -DWM_ARCH_OPTION=64 -DWM_DP -DWM_LABEL_SIZE=32 -Wall -Wextra -Wold-style-cast -Wnon-virtual-dtor -Wno-unused-parameter -Wno-invalid-offsetof -Wno-attributes -O3  -DNoRepository -ftemplate-depth-100 -isystem/home/rahulv/OpenFOAM/rahulv-7/ThirdParty/Eigen3.2.9 -I/constitutiveEqs/utils -I/opt/openfoam7/src/finiteVolume/lnInclude -I/opt/openfoam7/src/meshTools/lnInclude -I/opt/openfoam7/src/transportModels/twoPhaseMixture/lnInclude -I/opt/openfoam7/src/transportModels/interfaceProperties/lnInclude -I../sparseMatrixSolvers/lnInclude -I../fvmb/lnInclude -isystem/home/rahulv/OpenFOAM/rahulv-7/ThirdParty/petsc-3.10.2/arch-linux2-c-opt/include -isystem/home/rahulv/OpenFOAM/rahulv-7/ThirdParty/petsc-3.10.2/include -DOMPI_SKIP_MPICXX -I/usr/lib/x86_64-linux-gnu/openmpi/include/openmpi -I/usr/lib/x86_64-linux-gnu/openmpi/include/openmpi/opal/mca/event/libevent2022/libevent -I/usr/lib/x86_64-linux-gnu/openmpi/include/openmpi/opal/mca/event/libevent2022/libevent/include -I/usr/lib/x86_64-linux-gnu/openmpi/include -pthread -IlnInclude -I. -I/opt/openfoam7/src/OpenFOAM/lnInclude -I/opt/openfoam7/src/OSspecific/POSIX/lnInclude   -fPIC -c constitutiveEqs/otherModels/ML-IKH/ML_IKH.C -o Make/linux64GccDPInt32Opt/constitutiveEqs/otherModels/ML-IKH/ML_IKH.o
constitutiveEqs/otherModels/ML-IKH/ML_IKH.C: In member function ‘virtual void Foam::constitutiveEqs::ML_IKH::correct()’:
constitutiveEqs/otherModels/ML-IKH/ML_IKH.C:254:41: error: ‘const Mesh {aka const class Foam::fvMesh}’ has no member named ‘solver’; did you mean ‘solvers_’?
           lambdaIEqn.solve(phi().mesh().solver("lambdaI"));
                                         ^~~~~~
                                         solvers_
/opt/openfoam7/wmake/rules/General/transform:25: recipe for target 'Make/linux64GccDPInt32Opt/constitutiveEqs/otherModels/ML-IKH/ML_IKH.o' failed
make: *** [Make/linux64GccDPInt32Opt/constitutiveEqs/otherModels/ML-IKH/ML_IKH.o] Error 1

